Fix scrollbar, close button and emote preview styling (#7911)
* add backdrop to close buttons

* fix cursor

* update scrollbar styling

* adjust colors

--- a/src/modules/settings/components/PageHeader.module.css
+++ b/src/modules/settings/components/PageHeader.module.css
@@ -21,6 +21,14 @@
   justify-content: center;
 }
 
+.closeButton {
+  background-color: var(--mantine-color-gray-light);
+}
+
+.closeButton:hover {
+  background-color: var(--mantine-color-gray-light-hover);
+}
+
 @media (min-width: 800px) {
   .sidenavToggleButton {
     display: none;
